[project]
name = "frachat"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Bowei Zhang", email = "zbw0517@gmail.com" }
]
requires-python = ">=3.8"
dependencies = []

[project.scripts]
frachat = "frachat:main"

[build-system]
requires = ["uv_build>=0.9.3,<0.10.0"]
build-backend = "uv_build"
