[project]
name = "frachat"
version = "0.1.0"
description = "Experiment with LLM chat branching and merging in CLI"
readme = "README.md"
authors = [
    { name = "Bowei Zhang", email = "psyclaudeZ@users.noreply.github.com"}
]
requires-python = ">=3.13"
dependencies = []

[project.scripts]
frachat = "frachat:main"

[build-system]
requires = ["uv_build>=0.9.3,<0.10.0"]
build-backend = "uv_build"
